--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,4 +1,3 @@
-<div>
+<div [ngClass]="{ reminder: item.packed }" class="item" (dblclick)="onToggle(item)">
     <p>{{item.description}} <fa-icon (click)="onDelete(item)" [ngStyle]="{'color': 'grey'}" [icon]="faTrash"></fa-icon></p>
-
 </div>
