--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,3 +1,8 @@
 <div>
-    <app-item *ngFor ="let item of list" [item]="item"(onDeleteItem)="deleteItem(item)"></app-item>
+    <app-item 
+        *ngFor ="let item of list" 
+        [item]="item" 
+        (onDeleteItem)="deleteItem(item)"
+        (onTogglePacked) = "togglePacked(item)"
+    ></app-item>
 </div>
