stuck on creating and adding item

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,4 +1,5 @@
 <div>
+    <app-add-item (onAddItem)="addItem(text)"></app-add-item>
     <app-item 
         *ngFor ="let item of list" 
         [item]="item" 
