--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,5 +1,5 @@
 <div>
-    <app-add-item (onAddItem)="addItem(text)"></app-add-item>
+    <app-add-item (onAddItem)="addItem($event)"></app-add-item>
     <app-item 
         *ngFor ="let item of list" 
         [item]="item" 
