implemented toggling of adding item form create uiservice

--- a/src/app/components/add-item/add-item.component.html
+++ b/src/app/components/add-item/add-item.component.html
@@ -1,4 +1,5 @@
-<form (ngSubmit)="onSubmit()">
+<form *ngIf="showAddItem"
+    (ngSubmit)="onSubmit()">
     <div>
         <label for="text">Item</label>
         <input type="text" name="text" [(ngModel)]="text" id="text" placeholder="Add Item">
