--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <h1>{{title}}</h1>
-    <app-button 
+    <app-button *ngIf="hasRoute('/')"
         color= "{{showAddItem ? 'purple' : 'blue'}}"
         text="{{showAddItem ? 'Close' : 'Add'}}"
         (buttonClick)="toggleCreateList()"
