cleaned the code a bit

--- a/src/app/components/add-item/add-item.component.html
+++ b/src/app/components/add-item/add-item.component.html
@@ -2,7 +2,7 @@
     (ngSubmit)="onSubmit()">
     <div>
         <label for="text">Item</label>
-        <input type="text" name="text" [(ngModel)]="text" id="text" placeholder="Add Item">
+        <input type="text" name="text" [(ngModel)]="text" id="text" placeholder="Add Item"/>
     </div>
 
     
