--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,8 +3,7 @@
     <app-button *ngIf="hasRoute('/')"
         color= "{{showAddItem ? 'purple' : 'blue'}}"
         text="{{showAddItem ? 'Close' : 'Add'}}"
-        (buttonClick)="toggleCreateList()"
-    ></app-button>
+        (buttonClick)="toggleCreateList()"></app-button>
 </header>
 
 
