fixed item css class naming comvention

--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,3 +1,8 @@
-<div [ngClass]="{ reminder: item.packed }" class="item" (dblclick)="onToggle(item)">
-    <p>{{item.text}} <fa-icon (click)="onDelete(item)" [ngStyle]="{'color': 'grey'}" [icon]="faTrash"></fa-icon></p>
+<div [ngClass]="{ packed: item.packed }" class="item" (dblclick)="onToggle(item)">
+    
+    <p>{{item.text}} 
+        
+        <fa-icon (click)="onDelete(item)" [ngStyle]="{'color': 'grey'}" [icon]="faTrash"></fa-icon>
+    
+    </p>
 </div>
