--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Task Tracker</h2>
+    <h2>Packing Checklist</h2>
     <h4>Version: 1.0.0</h4>
     <p>Created by Becca Johnson using JavaScript with an Angular framework.</p>
     <a routerLink="/">Go Back</a>
