--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,11 @@
 <header>
     <h1>{{title}}</h1>
-    <app-button *ngIf="hasRoute('/')"
-        color= "{{showAddItem ? 'purple' : 'blue'}}"
+
+    <app-button class="button" *ngIf="hasRoute('/')"
+        color= "{{showAddItem ? 'purple' : 'green'}}"
         text="{{showAddItem ? 'Close' : 'Add'}}"
-        (buttonClick)="toggleCreateList()"></app-button>
+        (buttonClick)="toggleShowForm()"></app-button>
+    
 </header>
 
 
