--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="list">
     <app-add-item (onAddItem)="addItem($event)"></app-add-item>
-    <app-item 
+    <app-item        
         *ngFor ="let item of list" 
         [item]="item" 
         (onDeleteItem)="deleteItem(item)"
