--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="list">
+<div>
     <app-add-item (onAddItem)="addItem($event)"></app-add-item>
     <app-item        
         *ngFor ="let item of list" 
