--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -2,4 +2,7 @@ footer {
     border-style: solid;
     order: black;
     text-align: right;
+    padding: 20px;
+    display: flex;
+    justify-content: flex-end;
 }
