--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>{{title}}</h1>
+    <h1 class="title">{{title}}</h1>
 
     <app-button class="button" *ngIf="hasRoute('/')"
         color= "{{showAddItem ? 'purple' : 'green'}}"
