adding some final css

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,5 @@
 <div>
-    <h2>Packing Checklist</h2>
     <h4>Version: 1.0.0</h4>
-    <p>Created by Becca Johnson using JavaScript with an Angular framework.</p>
+    <p>Created by Becca Johnson in 2021 as a capstone project for LaunchCode.<br>Angular was used for this project.</p>
     <a routerLink="/">Go Back</a>
 </div>
