--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,8 @@
 <footer>
-    <p>Copyright &copy; 2021</p>
-    <a routerLink="/about">About</a>
+    <div id="copyright">
+        <p>Copyright &copy; 2021</p>
+    </div>
+    <div id="about-link">
+        <a routerLink="/about">About</a>
+    </div>
 </footer>
