--- a/src/app/components/add-item/add-item.component.html
+++ b/src/app/components/add-item/add-item.component.html
@@ -1,11 +1,13 @@
 <form *ngIf="showAddItem"
     (ngSubmit)="onSubmit()">
     <div>
-        <label for="text">Item</label>
-        <input type="text" name="text" [(ngModel)]="text" id="text" placeholder="Add Item"/>
-    </div>
 
+        <label for="text">Item: </label>
+
+        <input type="text" name="text" [(ngModel)]="text" id="text" placeholder="What else?"/>
     
-        <input type="submit" value="Save Item"/>
-    
+        <input type="submit" value="Add to list"/>
+
+    </div>  
+
 </form>
